--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@ setTimeout(function(){
 
 setTimeout(function(){
 		//回答の出力
-	　var Question = new CommentCls(1, "ごめね。生魚嫌いなの");
+	　var Question = new CommentCls(1, "ごめんね。生魚嫌いなの");
 	　},800);
 
 }else if(InputText.match("おでん")){
